[package]
name = "sixty-five"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.x86_64-unknown-linux-gnu]
rustflags = ["-Clink-arg=-Wl,--no-rosegment"]

[profile.release]
debug = true
strip = false

[workspace]
[dependencies]
anyhow = "1.0.79"
bytemuck = { version = "1.25.0", features = ["derive"] }
decoder_macro = { path = "./decoder_macro"}
enum-display = "0.1.3"
enum_delegate = "0.2.0"
genawaiter = "0.99.1"
macroquad = "0.4.14"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.138"

[dev-dependencies]
datatest = "0.8.0"
